force-app/main/default/objects/Case/fields/Fund_Available_for_Case_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Fund_Available_for_Case_Disbursement__c</fullName>
    <description>Fund Available for Relief fund Case Disbursement</description>
    <label>Fund Available for Case Disbursement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>