force-app/main/default/objects/Case/fields/Relief_Fund__c.field-meta.xml
<CustomField>
    <fullName>Relief_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case Relief Fund reference</description>
    <label>Relief Fund Case Details</label>
    <referenceTo>Relief_Fund__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>