force-app/main/default/objects/Case/fields/Total_Relief_Fund_Case_Grant__c.field-meta.xml
<CustomField>
    <fullName>Total_Relief_Fund_Case_Grant__c</fullName>
    <description>Total Relief Fund Case required support Grant amount</description>
    <formula>Relief_Fund__r.Total_Relief_Grant__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Relief Fund Case Grant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>